# aiida-s3

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: aws-s3.yml  azure-blob.yml  cd.yml  ci.yml  validate_release_tag.py
src/aiida_s3/: __init__.py
src/aiida_s3/cli/: __init__.py  cmd_profile.py
src/aiida_s3/repository/: __init__.py  aws_s3.py  azure_blob.py  s3.py
src/aiida_s3/storage/: __init__.py  psql_aws_s3.py  psql_azure_blob.py  psql_dos.py  psql_s3.py
tests/: conftest.py  test_conftest.py  test_version.py
tests/cli/: test_profile.py  test_root.py
tests/repository/: test_aws_s3.py  test_azure_blob.py  test_s3.py
tests/static/config/: psql_aws_s3.yml  psql_azure_blob.yml  psql_s3.yml
tests/storage/: test_psql_aws_s3.py  test_psql_azure_blob.py
